# drinkit

./: .gitignore  CLAUDE_BUILD_PLAN.md  GRABZI_RUN.md  GRABZI_ПРОМПТ_сборка_ТЗ.md  README.md  docker-compose.yml
Juicy_документы/: Juicy_USER_STORIES_по_ролям.md  Juicy_СМЕТА_по_функционалу.md  Juicy_СТРАНИЦЫ_И_ЭКРАНЫ.md  (+2 more)
app/: README.md  (+4 more)
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py
backend/app/: cli.py  main.py
backend/app/core/: config.py  errors.py  pubsub.py  security.py
backend/app/models/: __init__.py  catalog.py  locations.py  orders.py  users.py
backend/app/routers/: admin_catalog.py  admin_locations.py  admin_media.py  admin_orders.py  admin_settings.py  auth.py  catalog.py  content.py  coupons.py  dashboard.py  locations.py  orders.py  payments.py  staff.py  ws.py
backend/app/services/: i18n.py  location_service.py  migrate.py  order_flow.py  sanitize_html.py  seed.py  seed_grabzi.py  settings_registry.py  storage.py
backend/tests/: conftest.py  test_admin.py  test_admin_locations.py  test_admin_settings_content.py  test_auth.py  test_catalog.py  test_coupons.py  test_exh_admin_catalog.py  test_exh_admin_orders.py  test_exh_auth.py  test_exh_catalog.py  test_exh_coupons.py  test_exh_dashboard.py  test_exh_orders.py  test_exh_payments.py  test_exh_staff.py  test_exh_ws.py  test_limit_race.py  test_location_logic.py  test_location_orders.py  test_locations_api.py  test_media.py  test_orders_flow.py  test_staff_scope.py  test_ws_auth.py
(+142 files in other folders)
